--- a/Chatplatform/requirements.txt
+++ b/Chatplatform/requirements.txt
@@ -1,122 +1,160 @@
+absl-py==1.4.0
+aiohttp==3.8.4
+aiosignal==1.3.1
 anyio==3.6.2
 apturl==0.5.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
-asgiref==3.5.0
+asgiref==3.6.0
 asttokens==2.2.1
-attrs==21.2.0
-Automat==20.2.0
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==22.2.0
+Automat==22.10.0
 backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
 bleach==6.0.0
-blinker==1.4
+blinker==1.6.2
 Brlapi==0.8.3
-certifi==2020.6.20
+cachetools==5.3.0
+certifi==2022.12.7
 cffi==1.15.1
-chardet==4.0.0
+chardet==5.1.0
+charset-normalizer==3.1.0
 chrome-gnome-shell==0.0.0
 cliapp==1.20180812.1
-click==8.0.3
+click==8.1.3
 cmdtest==0.32+git
-colorama==0.4.4
+colorama==0.4.6
 comm==0.1.3
 command-not-found==0.3
 constantly==15.1.0
-cryptography==3.4.8
+contourpy==1.0.7
+cryptography==40.0.1
 cupshelpers==1.0
 cv==1.0.0
+cycler==0.11.0
 dbus-python==1.2.18
-debugpy==1.6.6
+debugpy==1.6.7
 decorator==5.1.1
 defer==1.0.6
 defusedxml==0.7.1
-deluge==2.0.3
+deluge==2.1.1
 distlib==0.3.6
-distro==1.7.0
-distro-info===1.1build1
-Django==3.2.12
+distro==1.8.0
+distro-info==1.0
+Django==4.2
 duplicity==0.8.21
 executing==1.2.0
-fasteners==0.14.1
+fasteners==0.18
 fastjsonschema==2.16.3
-filelock==3.9.0
+filelock==3.11.0
+flatbuffers==23.3.3
+fonttools==4.39.3
 fqdn==1.5.1
-future==0.18.2
+frozenlist==1.3.3
+fsspec==2023.5.0
+future==0.18.3
+gast==0.5.3
+gcloud==0.18.3
 GeoIP==1.3.2
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+googleapis-common-protos==1.59.0
+gradio_client==0.2.4
+grpcio==1.53.0
 gyp==0.1
+h11==0.14.0
+h5py==3.8.0
 html5lib==1.1
-httplib2==0.20.2
+httpcore==0.17.0
+httplib2==0.22.0
+httpx==0.24.0
+huggingface-hub==0.14.1
 hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
+idna==3.4
+importlib-metadata==6.3.0
+incremental==22.10.0
 ipykernel==6.22.0
-ipython==8.11.0
+ipython==8.12.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.6
 isoduration==20.11.0
+jaraco.classes==3.2.3
+jax==0.4.8
 jedi==0.18.2
-jeepney==0.7.1
+jeepney==0.8.0
 Jinja2==3.1.2
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
-jupyter_client==8.1.0
+jupyter_client==8.2.0
 jupyter_core==5.3.0
 jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
+jws==0.1.3
 keras==2.12.0
-keyring==23.5.0
+keyring==23.13.1
+kiwisolver==1.4.4
 language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.5
 lazr.uri==1.0.6
-libtorrent===2.0.5-build-libtorrent-rasterbar-qrM5vM-libtorrent-rasterbar-2.0.5-bindings-python
+libclang==16.0.0
+libtorrent==2.0.7
 lockfile==0.12.2
 louis==3.20.0
-lxml==4.8.0
+lxml==4.9.2
 macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.3.6
-MarkupSafe==2.0.1
+Mako==1.2.4
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
-meson==0.61.2
+meson==1.1.0
 mistune==2.0.5
+ml-dtypes==0.1.0
 monotonic==1.6
-more-itertools==8.10.0
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.10
+more-itertools==9.1.0
+multidict==6.0.4
+nbclassic==0.5.5
+nbclient==0.7.3
+nbconvert==7.3.1
 nbformat==5.8.0
 nest-asyncio==1.5.6
 netifaces==0.11.0
-notebook==6.5.3
+notebook==6.5.4
 notebook_shim==0.2.2
-numpy==1.21.5
-oauthlib==3.2.0
+numpy==1.24.2
+oauth2client==4.1.3
+oauthlib==3.2.2
 olefile==0.46
-packaging==23.0
+openai==0.27.7
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+packaging==23.1
 Panda3D==1.10.13
-panda3d-gltf==0.13
+panda3d-gltf==0.14
 panda3d-simplepbr==0.10
-pandas==1.5.3
+pandas==2.0.0
 pandocfilters==1.5.0
-paramiko==2.9.3
+paramiko==3.1.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.0.1
+Pillow==9.5.0
 pipenv==2022.12.19
 platformdirs==2.6.2
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
-protobuf==3.12.4
+protobuf==4.22.1
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -124,6 +162,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.1
 pycairo==1.20.1
 pycparser==2.21
+pycryptodome==3.4.3
 pycups==2.0.1
 pygame==2.1.2
 Pygments==2.11.2
@@ -135,13 +174,15 @@ PyNaCl==1.5.0
 pyOpenSSL==21.0.0
 pyparsing==2.4.7
 pyperclip==1.8.2
+Pyrebase==3.0.27
 pyRFC3339==1.1
 pyrsistent==0.19.3
-python-apt==2.3.0+ubuntu2.1
+python-apt==2.4.0+ubuntu1
 python-dateutil==2.8.2
 python-dbusmock==0.27.5
 python-debian===0.1.43ubuntu1
 python-json-logger==2.0.7
+python-jwt==2.0.1
 pytz==2022.1
 pyxdg==0.27
 PyYAML==5.4.1
@@ -150,9 +191,13 @@ qtconsole==5.4.1
 QtPy==2.3.1
 rencode==1.0.6
 reportlab==3.6.8
-requests==2.25.1
+requests==2.28.2
+requests-oauthlib==1.3.1
+requests-toolbelt==0.7.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rsa==4.9
+scipy==1.10.1
 scour==0.38.2
 SecretStorage==3.3.1
 Send2Trash==1.8.0
@@ -165,17 +210,29 @@ soupsieve==2.3.1
 sqlparse==0.4.2
 stack-data==0.6.2
 systemd-python==234
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.2.0
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.2
+tqdm==4.65.0
 traitlets==5.9.0
 ttystatus==0.38
 Twisted==22.1.0
-ubuntu-advantage-tools==27.9
+typing_extensions==4.5.0
+tzdata==2023.3
+ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
 unattended-upgrades==0.1
+uplink==0.9.7
 uri-template==1.2.0
+uritemplate==4.1.1
 urllib3==1.26.5
 ursina==5.2.0
 usb-creator==0.3.7
@@ -187,9 +244,13 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
+websockets==11.0.3
+Werkzeug==2.2.3
 widgetsnbextension==4.0.7
+wrapt==1.14.1
 xdg==5
 xkit==0.0.0
 xlib==0.21
+yarl==1.9.2
 zipp==1.0.0
 zope.interface==5.4.0
